syntax = "proto3";

option csharp_namespace = "Image.Grpc.Service";

package images;

service Images {
	rpc PostFoodImage (PostFoodImageRequest) returns (PostFoodImageReply);
	rpc GetFoodImage (GetFoodImageRequest) returns (GetFoodImageReply);

	rpc PostRestaurantImage (PostRestaurantImageRequest) returns (PostRestaurantImageReply);
	rpc GetRestaurantImage (GetRestaurantImageRequest) returns (GetRestaurantImageReply);

	rpc PostFoodCategoryImage (PostFoodCategoryImageRequest) returns (PostFoodCategoryImageReply);
	rpc GetFoodCategoryImage (GetFoodCategoryImageRequest) returns (GetFoodCategoryImageReply);

}

message PostFoodImageRequest {
	string restaurant = 1;
	string food = 2;
	bytes image = 3;
}

message PostFoodImageReply {
	string message = 1;
}

message GetFoodImageRequest {
	string restaurant = 1;
	string food = 2;
}

message GetFoodImageReply {
	bool isSuccess = 1;
	bytes image = 2;
}

message PostRestaurantImageRequest {
	string restaurant = 1;
	bytes image = 2;
}

message PostRestaurantImageReply {
	string message = 1;
}

message GetRestaurantImageRequest {
	string restaurant = 1;
}

message GetRestaurantImageReply {
	bytes image = 1;
}

message PostFoodCategoryImageRequest {
	string restaurant = 1;
	string category = 2;
	bytes image = 3;
}

message PostFoodCategoryImageReply {
	string message = 1;
}

message GetFoodCategoryImageRequest {
	string restaurant = 1;
	string category = 2;
}

message GetFoodCategoryImageReply {
	bytes image = 1;
}
